tests/snapshots/snapshot_golden_comprehensive__support_level_emulated.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: "SupportLevel::Emulated"
---
"emulated"
