tests/snapshots/snapshot_golden_comprehensive__support_level_restricted.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: "SupportLevel::Restricted { reason: \"disabled by policy\".into(), }"
---
{
  "restricted": {
    "reason": "disabled by policy"
  }
}
