tests/snapshots/snapshot_golden_comprehensive__support_level_unsupported.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: "SupportLevel::Unsupported"
---
"unsupported"
