tests/snapshots/snapshot_golden_comprehensive__wo_builder_customized.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: wo
---
{
  "id": "[uuid]",
  "task": "custom task",
  "lane": "workspace_first",
  "workspace": {
    "root": "/custom/root",
    "mode": "pass_through",
    "include": [],
    "exclude": []
  },
  "context": {
    "files": [],
    "snippets": []
  },
  "policy": {
    "allowed_tools": [],
    "disallowed_tools": [],
    "deny_read": [],
    "deny_write": [],
    "allow_network": [],
    "deny_network": [],
    "require_approval_for": []
  },
  "requirements": {
    "required": []
  },
  "config": {
    "model": "claude-3-opus",
    "vendor": {},
    "env": {},
    "max_budget_usd": 10.0,
    "max_turns": 50
  }
}
