tests/snapshots/snapshot_golden_comprehensive__wo_capability_requirements_empty.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: "CapabilityRequirements::default()"
---
{
  "required": []
}
