tests/snapshots/snapshot_golden_comprehensive__wo_capability_requirements_multiple.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: reqs
---
{
  "required": [
    {
      "capability": "tool_read",
      "min_support": "native"
    },
    {
      "capability": "streaming",
      "min_support": "emulated"
    },
    {
      "capability": "tool_bash",
      "min_support": "native"
    }
  ]
}
