tests/snapshots/snapshot_golden_comprehensive__wo_context_packet_empty.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: "ContextPacket::default()"
---
{
  "files": [],
  "snippets": []
}
