tests/snapshots/snapshot_golden_comprehensive__wo_context_packet_with_snippets.snap
---
source: tests/snapshot_golden_comprehensive.rs
expression: sample_context()
---
{
  "files": [
    "src/main.rs",
    "README.md"
  ],
  "snippets": [
    {
      "name": "hint",
      "content": "Look at the auth module"
    },
    {
      "name": "constraint",
      "content": "Do not modify tests"
    }
  ]
}
